Simple navigation bar - only css

--- a/Learning-Materials/Tanvir/index.html
+++ b/Learning-Materials/Tanvir/index.html
@@ -17,7 +17,8 @@ Initiated at : 23 November 2025
      <header>
         <!-- navigation bar -->
         <nav>
-            <div class="logo"><img src="#" alt="#"></div>
+            <div class="logo"><img src="#" alt="#">LOGO</div>
+            <!-- ham-menu - make it together -->
             <div class="links">
                 <ul>
                     <li>Home</li>
@@ -31,7 +32,9 @@ Initiated at : 23 November 2025
      
     
     <!-- main section -->
-     <main></main>
+     <main>
+        <div class="banner">Banner</div>
+     </main>
     <!-- Footer -->
      <footer>
         <!-- creator details  -->
