Following week task updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
      <header>
         <nav>
             <div class="logo">Logo</div>
-            <div class="search-bar"><input type="text" placeholder="Search..."></div>
+            <div class="search-bar">
+                <!-- 
+                $$$I need to work on this portion later $$$
+                <form action="index.php" method="get">  
+                <input type="submit" value="submit">
+                </form> 
+                
+                -->
+                  <input type="text" placeholder="Search..."> 
+            </div>
             <div class="menu-icon" id="menu-icon">
                 <span></span>
                 <span></span>
