Menu category updated

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
 
             <div class="left-menu-content" id="left-menu-content">
                 <ul>
-                    <li><a href="#">Category 1</a></li>
-                    <li><a href="#">Category 2</a></li>
-                    <li><a href="#">Category 3</a></li>
-                    <li><a href="#">Category 4</a></li>
-                    <li><a href="#">Category 5</a></li>
+                    <li><a href="#">Shoes</a></li>
+                    <li><a href="#">T Shirts</a></li>
+                    <li><a href="#">Joggers</a></li>
+                    <li><a href="#">Wallets</a></li>
+                    <li><a href="#">Sports</a></li>
                 </ul>
             </div>
             </section>
             <section class="hero">
+                <div class="banner">
+                    <h3>Ads!</h3>
+                </div>
                 <!-- Product Tiles -->
                 <div class="tile">
                     <ul id="prodcut-list">
@@ -178,8 +181,14 @@
                     </ul>
                 </div>
             </section>
-            <section class="right-column">
-                <h1>Right</h1>
+            <section class="right-column" id="right-column">
+                <div class="toggle-left-menu" id="toggle-right-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+                <!-- <h1>Right</h1> -->
             </section>
      </main>
         <!--
