Account Page - Under construction :)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="./src/pages/history.html">History</a></li>
-                <li><a href="./src/pages/account.html">Account</a></li>
+                <li><a href="./src/pages/login.html">Account</a></li>
                 <li><a href="./src/pages/customer-service.html">Customer Service</a></li>
             </ul>
         </nav>
