--- a/src/pages/account.html
+++ b/src/pages/account.html
@@ -31,6 +31,26 @@
         </nav>
      </header>
      <main>
+        <!-- What should be the contents of this page ?
+
+        I have not planned what should be the content of this page but I need those criteras to fill : 
+        #funcitons : 
+        if the user is logged in there should be those items inside this page 
+       #personal information : 
+        [ ]Name ,
+        [ ]Address,
+        [ ]Phone ,
+        [ ]Email ,
+        [ ]Profile picture. 
+
+        #transaction details 
+        [ ]Card details (if required) 
+        [ ]Paypal or bKash
+
+        #Purcashed History 
+        [ ]List all items that the user already purcashed 
+
+         -->
         <h1>Account Page</h1>
      </main>
 </body>
